--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 argparse==1.2.1
 -e git://github.com/richardkiss/pycoin.git@2c7e3df80379ff937ce02c1d8779a5dd7e277e15#egg=pycoin
-wsgiref==0.1.2
+-e git://github.com/vbuterin/pybitcointools.git@bce500e154523f78912365d9e3b51d34589831a3#egg=pybitcointools
